# ActionArc

./: README.md  pyproject.toml
actionarc/: __init__.py  main.py  paths.py  version.py
actionarc/components/: builtin.py  registry.py
actionarc/components/actions/: base.py  write_file.py
actionarc/components/triggers/: always.py  base.py
actionarc/data/arcs/: example_arc.json
actionarc/engine/: context.py  controller.py  results.py  runner.py  scheduler.py
actionarc/gui/: __init__.py  application.py  main_window.py
actionarc/models/: __init__.py  action.py  arc.py  trigger.py
actionarc/storage/: arc_store.py
data/arcs/: example_arc.json  example_arc2.json
docs/: ARCHITECTURE.md  DESIGN_PRINCIPLES.md  PRODUCT_SPEC.md  TERMINOLOGY.md
tests/: test_arc.py  test_arc_store.py
