[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "actionarc"
version = "0.1.0"
description = "A desktop automation platform built around reusable triggers, actions, and Arcs."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Casey Meador" }
]
dependencies = [
    "PySide6>=6.10,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
actionarc = "actionarc.main:main"

[tool.setuptools.packages.find]
include = ["actionarc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]